# Finance-Core---Projeto-Financeiro

./: .gitignore  README.md  db.sql  main.py  pyproject.toml  run.py
controllers/: accounts_controller.py  users_controller.py
core/: connection.py  database.py
dependencies/: accounts.py  users.py
mappers/: conta_mapper.py
models/: __init__.py  contas.py  transacoes.py  users.py
repositories/: contas_repository.py  transacao_repository.py  users_repository.py
schemas/: conta_schema.py  contas.py  user_schema.py
services/: accounts_service.py  contas_repository.py  transaction_service.py  users_repository.py  users_service.py
