[project]
name = "finance-core"
version = "0.1.0"
description = "Backend financeiro desenvolvido com FastAPI"
authors = [
    {name = "Tutusr32",email = "rezendea142@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pymysql (>=1.2.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "fastapi (>=0.138.1,<0.139.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.20,<0.16.0)"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
lint = "ruff check ."
fix = "ruff check . --fix"
format = "ruff format ."
run = "uvicorn main:app --reload"
pre_test = "task lint"
test = "pytest -s -x --cov=app -vv"
post_test = "coverage html"
